--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <!-- Daftar Halaman -->
-        <div class="collapse navbar-collapse" id="myNavbar">
+        <div class="collapse navbar-collapse" id="myNavbar" style="background-color= #ffcc66">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home">Home</a></li>
             <li><a href="/chatbot">Aplication</a></li>
@@ -63,9 +63,9 @@
       <div class="row">
           <div>
             <!-- Welcome -->
-            <h2 style="color: #fff; font-size: 70px;">Welcome to</h2>
-            <h3 style="color: #fff; font-size: 30px;"><b>Insighfull Muslim Bot</b></h3><br>
-            <p style="text-align: justify;text-justify: inter-word; color: #fff; font-size: 20px;">
+            <h2 style="color: #ffaa00; font-size: 70px;">Selamat Datang Di</h2>
+            <h3 style="color: #ffaa00; font-size: 30px;"><b>Insighfull Muslim Bot</b></h3><br>
+            <p style="text-align: justify;text-justify: inter-word; color: #e69900; font-size: 20px;">
               tips berpakaian muslim terupdate & fashionable
             </p>
             <br>
@@ -106,7 +106,7 @@
           <nav id="navgo" class="navbar" style="background-color:#ffffff;z-index: 0;">
             <ul class="nav nav-pills">
               <li class="nav-item">
-                <a class="btn btn-default btn-lg" href="https://hijab.id/" style="background-color:#4e6e81; color: #fff !important;">Go</a>
+                <a class="btn btn-default btn-lg" href="https://hijab.id/" style="background-color:#4e6e81; color: #fff !important;">Info Produk</a>
               </li>
             </ul>
           </nav>
