--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
             <nav id="navgo" class="navbar-show-more" style="z-index: 0;">
               <ul class="nav nav-pills">
                 <li class="nav-item">
-                  <a class="btn btn-default btn-lg" href="#about" style="background-color:#4e6e81; color:#fff; border: none; outline:none">Show More</a>
+                  <a class="btn btn-default btn-lg" href="#about" style="background-color:#996600; color:#fff; border: none; outline:none">Show More</a>
                 </li>
               </ul>
             </nav>
@@ -106,7 +106,7 @@
           <nav id="navgo" class="navbar" style="background-color:#ffffff;z-index: 0;">
             <ul class="nav nav-pills">
               <li class="nav-item">
-                <a class="btn btn-default btn-lg" href="https://hijab.id/" style="background-color:#4e6e81; color: #fff !important;">Info Produk</a>
+                <a class="btn btn-default btn-lg" href="https://hijab.id/" style="background-color:#996600; color: #fff !important;">Info Produk</a>
               </li>
             </ul>
           </nav>
@@ -114,13 +114,15 @@
       </div><br><br>
     
       <div class="row">
-        <div class="col-sm-6 ">
-          <br>
+       
+        <!-- div class="col-sm-6 "> -->
+         <!-- <br>
           <!-- Gambar Deskripsi Aplikasi -->
-          <img src={{ url_for('static', filename='/images/chatbot.png') }} width="300" height="300"></img>
-        </div>
+          <!-- <img src={{ url_for('static', filename='/images/chatbot.png') }} width="300" height="300"></img> -->
+       <!-- </div> -->
+        
 
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <!-- Deskripsi Aplikasi -->
           <h4>SafeBot</h4>
           <p style="text-align: justify;text-justify: inter-word;">
@@ -135,27 +137,12 @@
           <nav id="navgo" class="navbar" style="background-color:#ffffff;z-index: 0;">
             <ul class="nav nav-pills">
               <li class="nav-item">
-                <a class="btn btn-default btn-lg" href="/chatbot" style="background-color:#4e6e81; color: #fff !important;">Go</a>
+                <a class="btn btn-default btn-lg" href="/chatbot" style="background-color:#996600; color: #fff !important;">Aplikasi</a>
               </li>
             </ul>
           </nav>
         </div>
       </div><br>
-    </div>
-
-    <!-- Bagian Halaman (Aplikasi phishing detection) -->
-    <div id="detection" data-bs-spy="scroll" data-bs-target="#navgo" data-bs-offset="0" class="scrollspy-example" class="container-fluid" tabindex="0">
-        <br>
-        <br>
-        <div class="row">
-            <h2 class="centered">fashion hijab</h2>
-            <div class="col-sm-6">
-                </br>
-                <img style="margin-left: 100px;" src={{ url_for('static', filename='/images/image1.png') }} width="700" height="500"></img>
-            </div>
-        </div>
-        <br>
-        <br>
     </div>
 
     <!-- Bagian Halaman (Anggota Kelompok) -->
