--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 
   <body id="halamanku" data-spy="scroll" data-target=".navbar" data-offset="60">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#cc8800;>
       <div class="container">
         <!-- Logo -->
         <div class="navbar-header">
@@ -36,12 +36,12 @@
         </div>
 
         <!-- Daftar Halaman -->
-        <div class="collapse navbar-collapse" id="myNavbar" style="background-color= #ffcc66">
+        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home">Home</a></li>
-            <li><a href="/chatbot">Aplication</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/chatbot">Aplikasi</a></li>
+            <li><a href="#team">Anggota</a></li>
+            <li><a href="#about">Info</a></li>
           </ul>
         </div>
       </div>
@@ -113,18 +113,10 @@
         </div>
       </div><br><br>
     
-      <div class="row">
-       
-        <!-- div class="col-sm-6 "> -->
-         <!-- <br>
-          <!-- Gambar Deskripsi Aplikasi -->
-          <!-- <img src={{ url_for('static', filename='/images/chatbot.png') }} width="300" height="300"></img> -->
-       <!-- </div> -->
-        
-
+      <div class="row">      
         <div class="col-sm-12">
           <!-- Deskripsi Aplikasi -->
-          <h4>SafeBot</h4>
+          <h4>Aplikasi</h4>
           <p style="text-align: justify;text-justify: inter-word;">
             Perlu diingat bahwa InsightfulMuslimBot adalah asisten AI berbasis teks, sehingga kami tidak dapat menyediakan gambar secara langsung. Namun, kami dapat memberikan deskripsi yang rinci dan mengarahkan pengguna ke sumber-sumber yang relevan atau platform e-commerce yang menyediakan gambar dan informasi lebih lanjut tentang produk-produk hijab.
           </p>
@@ -153,22 +145,22 @@
         <br>
         <div class="row slideanim">
             <div class="col-sm-6">
-                <img src={{ url_for('static', filename='/images/7.jpg') }}  width="200" height="200">
+                <img src={{ url_for('static', filename='/images/7.png') }}  width="200" height="200">
                 <h4>Adi Gunawan</h4>
                 <p>Universitas Catur Insan Cendekia</p>
             </div>
             <div class="col-sm-6">
-                <img src={{ url_for('static', filename='/images/8.jpg') }}  width="200" height="200">
+                <img src={{ url_for('static', filename='/images/8.png') }}  width="200" height="200">
                 <h4>Selvi Silviana</h4>
                 <p>STMIK IKMI CIREBON</p>
             </div>
             <div class="col-sm-6">
-                <img src={{ url_for('static', filename='/images/9.jpg') }}  width="200" height="200">
+                <img src={{ url_for('static', filename='/images/9.png') }}  width="200" height="200">
                 <h4>Ziam Agista Mutmainah</h4>
                 <p>Universitas Pendidikan Indonesia</p>
             </div>
             <div class="col-sm-6">
-                <img src={{ url_for('static', filename='/images/10.jpg') }}  width="200" height="200">
+                <img src={{ url_for('static', filename='/images/10.png') }}  width="200" height="200">
                 <h4>Yoga Adiansah</h4>
                 <p>STIMIK bandung</p>
             </div>
