--- a/templates/index.html
+++ b/templates/index.html
@@ -32,16 +32,16 @@
       <div class="container">
         <!-- Logo -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="#halamanku">Insighfull Muslim Bot</a>
+          <a class="navbar-brand" href="#halamanku" style="color: #ffb31a;">Insighfull Muslim Bot</a>
         </div>
 
         <!-- Daftar Halaman -->
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home">Home</a></li>
-            <li><a href="/chatbot">Aplikasi</a></li>
-            <li><a href="#team">Anggota</a></li>
             <li><a href="#about">Info</a></li>
+            <li><a href="#aplikasi">Aplikasi</a></li>
+            <li><a href="#team">Anggota</a></li>
           </ul>
         </div>
       </div>
@@ -87,8 +87,8 @@
       <div class="row">
         <div class="col-sm-6">
           <br>
-          <!-- Gambar Deskripsi Aplikasi -->
-          <img src={{ url_for('static', filename='/images/benner.jpg') }} width="300" height="300" ></img>
+          <!-- Gambar Deskripsi Fashion Muslim -->
+          <img src={{ url_for('static', filename='/images/benner.jpg') }} width="500" height="550" text-align="center"></img>
         </div>
 
         <div class="col-sm-6">
@@ -113,7 +113,7 @@
         </div>
       </div><br><br>
     
-      <div class="row">      
+      <div id="aplikasi" class="row">      
         <div class="col-sm-12">
           <!-- Deskripsi Aplikasi -->
           <h4>Aplikasi</h4>
